# shallowclone

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
shallowclone/: Cargo.toml
shallowclone-derive/: Cargo.toml
shallowclone-derive/src/: attributes.rs  gen_impl.rs  lib.rs  target_type.rs
shallowclone/src/: cows.rs  lib.rs  makeowned.rs  shallowclone.rs
shallowclone/src/makeowned/: tests.rs
shallowclone/src/shallowclone/: tests.rs
