[package]
name = "shallowclone"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Traits for working with copy-on-write types more efficiently."
repository = "https://github.com/PonasKovas/shallowclone"
readme = "../README.md"

[dependencies]
shallowclone-derive = { version = "0.1.0", path = "../shallowclone-derive/" }
serde = { version = "1", optional = true }

# optional deps for implementing the trait for foreign types
indexmap = { version = "2", optional = true }

[features]
indexmap = ["dep:indexmap"]
# optional serde Serialize/Deserialize impls for CoCow types.
serde = ["dep:serde"]
